--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,5 @@
-tmp/
-#忽略windows pyhton的虚拟环境
-windowsPythonEnv/
-#忽略MAC的python虚拟环境
-macPythonEnv/
+#python虚拟环境
+pynvim/
 #忽略所下载的插件加载路径，避免不同系统下冲突
-autoload/
-# 不忽略文件夹下的特定文件
-!autoload/plug.vim
 #忽略tmp
 tmp/
-_machine_specific.vim
