--- a/coc-settings.json
+++ b/coc-settings.json
@@ -2,8 +2,24 @@
   "languageserver": {
     "clangd": {
       "command": "clangd",
-      "rootPatterns": ["compile_flags.txt", "compile_commands.json"],
-      "filetypes": ["c", "cc", "cpp", "c++", "objc", "objcpp"]
+      "rootPatterns": [
+        "compile_flags.txt",
+        "compile_commands.json"
+      ],
+      "filetypes": [
+        "c",
+        "cc",
+        "cpp",
+        "c++",
+        "objc",
+        "objcpp"
+      ]
+    },
+    "lua": {
+      "command": "lua-language-server",
+      "filetypes": [
+        "lua"
+      ]
     }
   },
   "markdownlint.config": {
