--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,5 +1,5 @@
 {
-  "stylua.styluaPath": "/opt/homebrew/bin/stylua",
+  //"stylua.styluaPath": "/opt/homebrew/bin/stylua",
   "languageserver": {
     "clangd": {
       "command": "clangd",
