--- a/coc-settings.json
+++ b/coc-settings.json
@@ -26,5 +26,8 @@
   "markdownlint.config": {
     "default": true,
     "line_length": false
-  }
+  },
+  "snippets.ultisnips.directories": [
+    "$HOME/.config/nvim/Ultisnips/"
+  ]
 }
