--- a/coc-settings.json
+++ b/coc-settings.json
@@ -32,8 +32,9 @@
     "$HOME/.config/nvim/Ultisnips/"
   ],
   "coc-qml.qmlformatArgs": [
-      "-w",
-      "2",
-      "-i"
-    ]
+    "-w",
+    "2",
+    "-i"
+  ],
+  "cmake.formatter": "cmake-format"
 }
