--- a/coc-settings.json
+++ b/coc-settings.json
@@ -36,6 +36,17 @@
 			"rootPatterns": [
 				".git"
 			]
+		},
+		"qml": {
+			"command": "qmlls",
+			"args": [],
+			"filetypes": [
+				"qml"
+			],
+			"rootPatterns": [
+				".git"
+			],
+			"trace.server": "verbose"
 		}
 	},
 	"markdownlint.config": {
@@ -46,6 +57,6 @@
 		"$HOME/.config/nvim/Ultisnips/"
 	],
 	"cmake.formatter": "cmake-format",
-	"Lua.workspace.checkThirdParty": false,
-	"inlayHint.display": false
+	"inlayHint.display": false,
+	"snippets.ultisnips.pythonPrompt": false
 }
